2009-04-29  Mike Belshe  <mike@belshe.com>

Reviewed by Eric Seidel.

        Update location while page is loading.
        https://bugs.webkit.org/show_bug.cgi?id=21597

        Tested by:
        - fast/dom/location-new-window-no-crash
        - fast/dom/Window/window-open-pending-url

        * page/Location.cpp:

Canonical link: https://commits.webkit.org/35060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43014 268f45cc-cd09-0410-ab3c-d52691b4dbfc